--- a/Examples/SwiftUIDemo/SwiftUIDemo/Info.plist
+++ b/Examples/SwiftUIDemo/SwiftUIDemo/Info.plist
@@ -4,5 +4,18 @@
 <dict>
 	<key>API_TOKEN</key>
 	<string>$(API_TOKEN)</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>lytics-demo</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
