Only gather coverage for Lytics

--- a/.swiftpm/xcode/xcshareddata/xcschemes/lytics-Package.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/lytics-Package.xcscheme
@@ -55,7 +55,17 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
-      codeCoverageEnabled = "YES">
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "Lytics"
+            BuildableName = "Lytics"
+            BlueprintName = "Lytics"
+            ReferencedContainer = "container:">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
