Use Actions to Convert and Upload (#87)
* Use actions to convert, upload coverage

* Formatting

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,14 +16,17 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Build and Test
+      - name: Build and test
         uses: mxcl/xcodebuild@v1
         with:
           xcode: ^14
           platform: iOS
           code-coverage: true
+      - name: Convert coverage
+        uses: sersoft-gmbh/swift-coverage-action@v3
+        id: coverage-files
       - name: Upload coverage to Codecov
-        run: |
-          curl -Os https://uploader.codecov.io/latest/macos/codecov
-          chmod +x codecov
-          ./codecov -t ${{ secrets.CODECOV_TOKEN }}
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ${{ join(fromJSON(steps.coverage-files.outputs.files), ',') }}
