--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,10 +18,10 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-      - name: Git checkout main
+      - name: Git checkout
         uses: actions/checkout@v3
 
-      - name: Bump Version File
+      - name: Bump Version file
         id: bump
         run: |
          echo "::set-output name=version::$(swift package --allow-writing-to-package-directory version-file --bump ${{ inputs.release_type }})"
