--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,10 @@ jobs:
           export LYTICS_SWIFT_CI=BUILDING_FOR_RELEASE
           echo "::set-output name=version::$(swift package --allow-writing-to-package-directory version-file --target Lytics --bump ${{ inputs.release_type }})"
 
+      - name: Restore Package.resolved
+        run: |
+          git restore Package.resolved
+
       - name: Create pull request
         id: cpr
         uses: peter-evans/create-pull-request@v4
