--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,8 +5,10 @@ on:
   push:
     branches: [ main ]
   pull_request:
-    branches:
-      - '*'
+    types:
+      - opened
+      - reopened
+      - ready_for_review
 
 jobs:
   unit_tests:
