--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ on:
           - patch
           - minor
           - major
-
+  
 jobs:
   release:
     runs-on: ubuntu-latest
@@ -28,6 +28,12 @@ jobs:
         run: |
           git restore Package.resolved
 
+      - uses: tibdex/github-app-token@v1
+        id: generate-token
+        with:
+          app_id: ${{ secrets.FRONTEND_PROJECT_BOT_ID }}
+          private_key: ${{ secrets.FRONTEND_PROJECT_BOT_TOKEN }}
+          
       - name: Create pull request
         id: cpr
         uses: peter-evans/create-pull-request@v4
@@ -44,3 +50,4 @@ jobs:
 
             [1]: https://github.com/peter-evans/create-pull-request
           draft: false
+          token: ${{ steps.generate-token.outputs.token }}
