--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
       - uses: tibdex/github-app-token@v1
         id: generate-token
         with:
-          app_id: ${{ secrets.FRONTEND_PROJECT_BOT_ID }}
+          app_id: ${{ secrets.FRONTEND_PROBJECT_BOT_APP_ID }}
           private_key: ${{ secrets.FRONTEND_PROJECT_BOT_TOKEN }}
           
       - name: Create pull request
