--- a/.github/workflows/tag-release.yml
+++ b/.github/workflows/tag-release.yml
@@ -10,6 +10,8 @@ jobs:
   tag:
     runs-on: ubuntu-latest
     if: github.event.pull_request.merged == true && github.head_ref == 'release'
+    outputs:
+      current-version: ${{ steps.get-version.outputs.current-version }}
     steps:
       - name: Git checkout
         uses: actions/checkout@v3
@@ -20,6 +22,7 @@ jobs:
         run: |
           VERSION=$(grep -Eo '([0-9]+\.*)+' ${{ vars.VERSION_FILE_PATH }})
           echo "current-version=$VERSION" >> $GITHUB_ENV
+          echo "current-version=$VERSION" >> $GITHUB_OUTPUT
 
       - name: Generate token
         uses: tibdex/github-app-token@v1
@@ -39,3 +42,18 @@ jobs:
               ref: 'refs/tags/${{ env.current-version }}',
               sha: '${{ github.sha }}'
             })
+
+  cocoapods:
+    runs-on: macOS-latest
+    needs: tag
+    steps:
+      - name: Git checkout
+        uses: actions/checkout@v3
+
+      - name: Publish podspec
+        env:
+          COCOAPODS_TRUNK_TOKEN: ${{ secrets.COCOAPODS_TRUNK_TOKEN }}
+          LIB_VERSION: ${{ needs.tag.outputs.current-version }}
+        run: |
+          pod lib lint --allow-warnings
+          pod trunk push ${{ vars.PODSPEC_PATH }} --allow-warnings
