--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -46,3 +46,16 @@ jobs:
               ref: 'refs/tags/${{ env.current-version }}',
               sha: '${{ github.sha }}'
             })
+
+      - name: Create release
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ steps.generate-token.outputs.token }}
+          script: |
+            github.rest.repos.createRelease({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              tag_name: '${{ env.current-version }}',
+              draft: false,
+              prerelease: false
+            })
