--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -1,4 +1,4 @@
-name: Tag Release
+name: Create Release
 on:
   pull_request:
     types:
@@ -7,12 +7,19 @@ on:
       - 'main'
 
 jobs:
-  tag:
+  test:
+    name: Test
+    if: github.event.pull_request.merged == true && github.head_ref == 'release'
+    uses: lytics/ios-sdk/.github/workflows/tests.yml@main
+
+  release:
+    name: Release
+    needs: test
     runs-on: ubuntu-latest
     if: github.event.pull_request.merged == true && github.head_ref == 'release'
     steps:
       - name: Git checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Get version
         id: get-version
@@ -29,7 +36,7 @@ jobs:
           private_key: ${{ secrets.FRONTEND_PROJECT_BOT_TOKEN }}
 
       - name: Push tag
-        uses: actions/github-script@v6
+        uses: actions/github-script@v7
         with:
           github-token: ${{ steps.generate-token.outputs.token }}
           script: |
@@ -38,4 +45,17 @@ jobs:
               repo: context.repo.repo,
               ref: 'refs/tags/${{ env.current-version }}',
               sha: '${{ github.sha }}'
+            })
+
+      - name: Create release
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ steps.generate-token.outputs.token }}
+          script: |
+            github.rest.repos.createRelease({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              tag_name: '${{ env.current-version }}',
+              draft: false,
+              prerelease: false
             })
