Exclude frontend-project-bot

--- a/.github/release.yml
+++ b/.github/release.yml
@@ -6,6 +6,7 @@ changelog:
       - ci
       - ignore-for-release
     authors:
+      - frontend-project-bot
       - github-actions
       - octocat
   categories:
