--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -26,7 +26,7 @@ jobs:
         shell: bash
         run: |
           VERSION=$(grep -Eo '([0-9]+\.*)+' ${{ vars.VERSION_FILE_PATH }})
-          echo "current-version=$VERSION" >> $GITHUB_ENV
+          echo "current-version=$VERSION" >> $GITHUB_OUTPUT
 
       - name: Generate token
         uses: tibdex/github-app-token@v1
@@ -43,7 +43,7 @@ jobs:
             github.rest.git.createRef({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              ref: 'refs/tags/${{ env.current-version }}',
+              ref: 'refs/tags/${{ steps.get-version.outputs.current-version }}',
               sha: '${{ github.sha }}'
             })
 
@@ -55,7 +55,7 @@ jobs:
             github.rest.repos.createRelease({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              tag_name: '${{ env.current-version }}',
+              tag_name: '${{ steps.get-version.outputs.current-version }}',
               generate_release_notes: true,
               draft: false,
               prerelease: false
